[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "database-sharing"   # package name
version = "0.1.0"
description = "Shared database, auth, and schema logic"
authors = [{ name = "Ayush Khandelwal" }]
dependencies = [
    "fastapi",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
]
